# nw_operator_agent

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/agents/: base.py  netbox_search_agent.py
src/mcps/: client.py
src/models/: netbox_agent_model.py
src/prompts/: prompt.py
